    been fixed, it resulted in clients receiving events (like script
    output) multiple times.

  - A "doAdjust" method has been added to customize the action of
    "adjust" and the "offset" parameter to different conventions.

  - The "_Restart" command is now blocked if there are active background
    threads.

* Devices

  - Notifier devices can now be marked as "private", which means that their
    receivers are not overwritten with the users' addresses for each new
    experiment.

  - Unit handling of several Tango device classes has been improved.

* GUI

  - Rebinning of very large history datasets has been changed to use a
    "triangular downsampling" algorithm that better preserves interesting
    features of the data in question.

  - Triangular downsampling also applies to status monitor plots.


Release 3.2.0
-------------

* Core

  - The "center()" and "checkoffset()" commands can now use any defined
    fitting function, or "center_of_mass", to determine the peak center.

  - Fitting commands output the relative error as a column.

  - The collector service can now forward cache values to multiple different
    backends (NICOS cache/webhooks).

* Devices

  - Tango VectorInput/VectorOutput are now supported.

  - Added a device to read out the absolute Q value for TAS instruments.

  - The generic detector can now calculate post-processed values from
    scalar-valued PassiveChannels.

  - Added an image sink for writing multiple arrays from a single detector.

* GUI

  - Each setup can now name a "representative" device to show in the
    device tree when the setup is collapsed.

  - The history panel can now save multiple displayed curves in one data file.

  - The selection of a fit function, and whether to pick initial fit points,
    has been reworked in the scans and history panels.

  - All available fit functions can be used in the scans and history panels.

  - Fitting by default uses the currently viewed range to limit the fit range.
